--- a/.github/workflows/deploy-app.yaml
+++ b/.github/workflows/deploy-app.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Install dependencies
         run: npm install --frozen-lockfile
       - name: Build app
-        run: npm build
+        run: npm run build
       - name: Check files
         run: ls -al
       - name: Deploy to Github Pages
